fdo#56325: Don't forget to build_tree() in fillTable().

Else you'll get the wrong answer in isRowActive(), which always search
flag via tree.

Change-Id: Ic764b08c3fa3e2e24ea656bb03cc9d393e06fb13